feat: add example request to todos fetch

--- a/volumes/php/composer.json
+++ b/volumes/php/composer.json
@@ -5,5 +5,8 @@
     "require-dev": {
         "qossmic/deptrac": "^0.18.0",
         "roave/security-advisories": "dev-latest"
+    },
+    "require": {
+        "rmccue/requests": "^2.0"
     }
 }
